[package]
name = "rust-stopwatch"
version = "0.1.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple stopwatch for Rust"
repository = "https://github.com/mass10/rust-stopwatch/"
documentation = ""
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "*"
